syntax = "proto3";

option java_package = "net.matsudamper.folderviewer.repository.proto";
option java_multiple_files = true;

message SecureCredentialsProto {
  map<string, string> smb_passwords = 1;
  map<string, SharePointCredentialProto> share_point_credentials = 2;
}

message SharePointCredentialProto {
  string tenant_id = 1;
  string client_id = 2;
  string client_secret = 3;
}
