syntax = "proto3";

option java_package = "net.matsudamper.folderviewer.repository.proto";
option java_multiple_files = true;

message StorageListProto {
  repeated StorageConfigurationProto list = 1;
  repeated FavoriteConfigurationProto favorites = 2;
}

message StorageConfigurationProto {
  string id = 1;
  string name = 2;
  oneof config {
    SmbConfigurationProto smb = 3;
    LocalConfigurationProto local = 4;
    SharePointConfigurationProto sharepoint = 5;
  }
}

message SmbConfigurationProto {
  string ip = 1;
  string username = 2;
  string password = 3;
}

message LocalConfigurationProto {
  string root_path = 1;
}

message SharePointConfigurationProto {
  string object_id = 1;
  string tenant_id = 2;
  string client_id = 3;
  string client_secret = 4;
}

message FavoriteConfigurationProto {
  string id = 1;
  string name = 2;
  string storage_id = 3;
  string path = 4;
  string file_id = 5;
  string display_path = 6;
}
